--- a/index.html
+++ b/index.html
@@ -218,18 +218,19 @@
             
             <!-- GAME 8: BRAINROT JEOPARDY -->
             <div class="game-section">
-                <h3 class="game-section-title" style="color: gold;">🧠 BRAINROT JEOPARDY</h3>
+                <h3 class="game-section-title" style="color: #ff00ff;">🧠 BRAIN MELTDOWN 💥</h3>
                 <div class="mode-options">
-                    <div class="mode-option" style="border-color: gold; background: linear-gradient(135deg, #3a2a0a 0%, #1a1a0a 100%);" onclick="startJeopardy()">
-                        <div class="mode-icon">💰</div>
-                        <div class="mode-name">MILLIONÆR</div>
-                        <div class="mode-description">15 spørgsmål • 3 lifelines • Vind 1.000.000!</div>
+                    <div class="mode-option" style="border-color: #ff00ff; background: linear-gradient(135deg, #2a0a3a 0%, #1a0a2a 100%);" onclick="startJeopardy()">
+                        <div class="mode-icon">🧠</div>
+                        <div class="mode-name">GALAXY BRAIN</div>
+                        <div class="mode-description">15 niveauer • 10 sek timer • Saml 1.000.000 hjerneceller!</div>
                     </div>
                 </div>
                 <div class="jeopardy-lifeline-preview" style="display: flex; justify-content: center; gap: 15px; margin-top: 10px; font-size: 0.8rem; color: #aaa;">
-                    <span>50:50</span>
-                    <span>👥 Publikum</span>
-                    <span>📞 Ring til Ven</span>
+                    <span>🧠 Hjerne-Boost</span>
+                    <span>👥 Crowd Chaos</span>
+                    <span>📞 Ring en Rot</span>
+                    <span>⏰ Giv mig 2!</span>
                 </div>
             </div>
         </div>
