--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
                     <span>📞 Ring en Rot</span>
                     <span>⏰ Giv mig 2!</span>
                 </div>
+                <button onclick="showMeltdownScoreboard()" style="margin-top: 15px; padding: 10px 25px; background: linear-gradient(135deg, #ffff00, #ff8800); border: none; border-radius: 10px; font-family: 'Bangers', cursive; font-size: 1rem; cursor: pointer; color: #000;">🏆 SCOREBOARD</button>
             </div>
         </div>
     </div>
